# pithermal

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build_docs  build_docs.yml  release.yml
docs/: conf.py  index.rst  meridian.rst
examples/: image.py
src/pithermal/: __init__.py  meridian.py
