[project]
name = "pithermal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cmap>=0.6.2",
    "crcmod>=1.7",
    "gpiozero>=2.0.1",
    "numpy==2.0.2",
    "pillow==11.2.1",
    "rpi-gpio>=0.7.1",
    "smbus>=1.1.post2",
    "spidev>=3.8",
]

[[tool.uv.index]]
name = "piwheels"
url = "https://piwheels.org/simple"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
