[project]
name = "pithermal"
version = "0.1.0a1"
description = "Python library for thermal cameras compatible with Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cmap>=0.6.2,<0.7.0",
    "crcmod>=1.7,<2.0",
    "gpiozero>=2.0.1,<3.0.0",
    "numpy==2.0.2",
    "pillow==11.2.1",
    "rpi-gpio>=0.7.1,<0.8.0",
    "smbus>=1.1.post2,<2.0",
    "spidev>=3.8,<4.0",
]

[[tool.uv.index]]
name = "piwheels"
url = "https://piwheels.org/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
uv_build = { index = "pypi" }

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
